--- a/confirmacion-entrega-recoleccion.html
+++ b/confirmacion-entrega-recoleccion.html
@@ -554,7 +554,6 @@
             showNotification('Inicia sesión para usar tus direcciones guardadas.', 'info');
         }
 
-        // MODIFICACIÓN: Guardar dirección nueva al confirmar si no está seleccionada del select
         async function saveNewAddress(userId, inputElements) {
             const address = {
                 user_id: userId,
@@ -564,11 +563,9 @@
                 state: inputElements.state.value,
                 postal_code: inputElements.postalCode.value,
                 references: inputElements.references.value,
-                // Opcional: puedes intentar obtener del pin lat/lng
                 latitude: null,
                 longitude: null,
             };
-            // Si tienes el marker y el mapa, puedes asignar las coordenadas:
             if (inputElements === deliveryInputElements && deliveryMarker) {
                 const ll = deliveryMarker.getLatLng();
                 address.latitude = ll.lat;
@@ -579,7 +576,6 @@
                 address.latitude = ll.lat;
                 address.longitude = ll.lng;
             }
-            // Haz POST
             try {
                 const resp = await fetch(`${backendUrl}/api/addresses`, {
                     method: 'POST',
@@ -596,7 +592,7 @@
                     return null;
                 }
                 const data = await resp.json();
-                return data.id; // El ID de la dirección creada
+                return data.id;
             } catch (err) {
                 showNotification('Error al conectar con el servidor para guardar dirección.', 'error');
                 return null;
@@ -610,19 +606,18 @@
                 isDeliveryAddressConfirmed = false;
                 return;
             }
-            // Si NO hay dirección seleccionada, guarda una nueva
             if (!deliveryAddressId) {
                 const newId = await saveNewAddress(loggedInUser.id, deliveryInputElements);
                 if (newId) {
                     deliveryAddressId = newId;
-                    localStorage.setItem('deliveryAddressId', deliveryAddressId);
+                    localStorage.setItem('deliveryAddressId', String(deliveryAddressId));
                     showNotification('Dirección de entrega guardada y confirmada.', 'success');
                     isDeliveryAddressConfirmed = true;
                 } else {
                     isDeliveryAddressConfirmed = false;
                 }
             } else {
-                localStorage.setItem('deliveryAddressId', deliveryAddressId);
+                localStorage.setItem('deliveryAddressId', String(deliveryAddressId));
                 showNotification('Dirección de entrega confirmada.', 'success');
                 isDeliveryAddressConfirmed = true;
             }
@@ -639,25 +634,26 @@
                 const newId = await saveNewAddress(loggedInUser.id, pickupInputElements);
                 if (newId) {
                     pickupAddressId = newId;
-                    localStorage.setItem('pickupAddressId', pickupAddressId);
+                    localStorage.setItem('pickupAddressId', String(pickupAddressId));
                     showNotification('Dirección de recolección guardada y confirmada.', 'success');
                     isPickupAddressConfirmed = true;
                 } else {
                     isPickupAddressConfirmed = false;
                 }
             } else {
-                localStorage.setItem('pickupAddressId', pickupAddressId);
+                localStorage.setItem('pickupAddressId', String(pickupAddressId));
                 showNotification('Dirección de recolección confirmada.', 'success');
                 isPickupAddressConfirmed = true;
             }
         });
 
         finalizeOrderBtn.addEventListener('click', () => {
-            if (!isDeliveryAddressConfirmed || !isPickupAddressConfirmed) {
+            const deliveryId = localStorage.getItem('deliveryAddressId');
+            const pickupId = localStorage.getItem('pickupAddressId');
+            if (!isDeliveryAddressConfirmed || !isPickupAddressConfirmed || !deliveryId || !pickupId || isNaN(deliveryId) || isNaN(pickupId)) {
                 showNotification('Por favor, confirma ambas direcciones antes de continuar al pago.', 'error');
                 return;
             }
-            // Guarda fechas y los IDs de dirección en localStorage para uso en pago.html
             const shoppingCart = JSON.parse(localStorage.getItem('shoppingCart')) || {};
             if (shoppingCart.rentalDates && shoppingCart.rentalDates.start && shoppingCart.rentalDates.end) {
                 localStorage.setItem('greenhaulEntrega', shoppingCart.rentalDates.start);
