--- a/confirmacion-entrega-recoleccion.html
+++ b/confirmacion-entrega-recoleccion.html
@@ -436,7 +436,15 @@
             input.addEventListener('keydown', (e) => { if (e.key === 'Enter') { e.preventDefault(); geocodeAddress(pickupInputElements, pickupMap, pickupMarker); } });
         });
 
-        const shoppingCart = JSON.parse(localStorage.getItem('shoppingCart')) || {};
+        // MOSTRAR EL CONTADOR DE CARRITO EN LA ESQUINA SUPERIOR DERECHA
+        const shoppingCart = JSON.parse(localStorage.getItem('shoppingCart')) || { items: [] };
+        const cartCountEl = document.getElementById('cartCount');
+        if (cartCountEl) {
+            const totalItemsInCart = shoppingCart.items.reduce((sum, item) => sum + (item.quantity || 0), 0);
+            cartCountEl.textContent = totalItemsInCart;
+            cartCountEl.style.display = totalItemsInCart > 0 ? 'flex' : 'none';
+        }
+
         const rentalDatesSummaryEl = document.getElementById('rentalDatesSummary');
         if (shoppingCart.rentalDates && shoppingCart.rentalDates.start && shoppingCart.rentalDates.end) {
             if (shoppingCart.totalDays) {
