--- a/productos.html
+++ b/productos.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="product-grid" style="gap:2rem;">
                     <!-- KIT PEQUEÑO -->
-                    <div class="product-card" data-product-id="kit-pequeno" data-product-price="550.00">
+                    <div class="product-card" data-product-id="1" data-product-price="550.00">
                         <div class="badge best-value">Mejor Valor</div>
                         <div class="product-image" style="font-size:2.5rem;">🏡</div>
                         <div class="product-info">
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                     <!-- KIT MEDIANO -->
-                    <div class="product-card" data-product-id="kit-mediano" data-product-price="980.00">
+                    <div class="product-card" data-product-id="2" data-product-price="980.00">
                         <div class="badge popular">Más Popular</div>
                         <div class="product-image" style="font-size:2.5rem;">🏘️</div>
                         <div class="product-info">
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <!-- KIT GRANDE -->
-                    <div class="product-card" data-product-id="kit-grande" data-product-price="1600.00">
+                    <div class="product-card" data-product-id="3" data-product-price="1600.00">
                         <div class="badge"></div>
                         <div class="product-image" style="font-size:2.5rem;">🏰</div>
                         <div class="product-info">
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                     <!-- ACCESORIOS -->
-                    <div class="product-card" data-product-id="accesorios-pro" data-product-price="300.00">
+                    <div class="product-card" data-product-id="4" data-product-price="300.00">
                         <div class="badge nuevo">Accesorios</div>
                         <div class="product-image" style="font-size:2.5rem;">✨</div>
                         <div class="product-info">
